--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body::-webkit-scrollbar{
       text-align: center;
       font-size: 2em;
       letter-spacing: 3px;
-      color: #3b5998;
       text-transform: lowercase;
 }
 
@@ -356,8 +355,10 @@ nav #menu li a:hover {
 }
 #projects .project-info h2 {
 	font-size: 1em;
-	font-weight: 500;
+	font-weight: bold;
+      color: #999;
 	margin-top: 10px;
+
 }
 #projects .project-info p {
 	color: rgb(0, 0, 0);
@@ -389,191 +390,10 @@ nav #menu li a:hover {
 /*--------------- general style --------------- */
 
 /*--------------- footer section --------------- */
-.footer {
-      font-size: 1em;
-}
-
-.collab {
-      text-align: right;
-}
-
-.collab p {
-      font-weight: lighter !important;
-      margin-bottom: 20px;
-}
-
-.hr {
-      background: rgba(255, 255, 255, 0.2);
-      height: 1px;
-}
-
-.info h4 {
-      font-size: 18px;
-      font-weight: lighter;
-}
-
-.info p {
-      color: grey;
-      font-weight: lighter;
-}
-
-.info li {
-      font-weight: lighter;
-      color: #fff;
-      font-size: 18px;
-      padding-left: 20px;
-}
-
-#fb::before {
-      display: inline-block;
-      content: '';
-      border-radius: 100%;
-      height: 4px;
-      width: 4px;
-      margin-right: 6px;
-      background: #3b5998;
-}
-
-
-#ig::before {
-      display: inline-block;
-      content: '';
-      border-radius: 100%;
-      height: 4px;
-      width: 4px;
-      margin-right: 6px;
-      background: #fcaf45;
-}
-
-
-#tw::before {
-      display: inline-block;
-      content: '';
-      border-radius: 100%;
-      height: 4px;
-      width: 4px;
-      margin-right: 6px;
-      background: #55acee;
-}
-
-
-#yt::before {
-      display: inline-block;
-      content: '';
-      border-radius: 100%;
-      height: 4px;
-      width: 4px;
-      margin-right: 6px;
-      background: #c4302b;
-}
-
-#media, #address {
-      text-align: right;
-}
-
-#media ul {
-      list-style: none;
-}
-
-#media ul li {
-      display: inline-block;
-}
-
-@media(max-width: 768px) {
-      .collab, #personal, #media, #address {
-            text-align: center;
-      }
-
-      .info ul {
-            margin: 0 0 0 -22px;
-            padding: 0;
-      }
-}
 
 /*---------------about page --------------- */
 
-.about {
-      height: 500px;
-      margin-top: 120px;
-}
-
-.image {
-      background: url(./img/me.jpg) no-repeat 50% 40%;
-      background-size: cover;
-}
-
 /*--------------- contact form --------------- */
-
-#contact-form {
-      margin: 5% 1.4%;
-}
-
-#contact-form ul {
-      list-style: none;
-      border-radius: 5px;
-      margin-bottom: 40px;
-}
-
-#contact-form li {
-      padding: 10px;
-}
-
-#contact-form li:last-of-type {
-      border-bottom: none;
-}
-
-#contact-form label {
-      display: block;
-      font-size: .8em;
-      color: #999;
-      padding-left: 5px;
-}
-
-#contact-form input, #contact-form textarea {
-      width: 100%;
-      padding: 5px;
-      border: none;
-      resize: vertical;
-      background: transparent;
-      color: #fff;
-      font-weight: bolder;
-}
-
-input:focus {
-      outline: none;
-      border: none;
-}
-
-textarea:focus {
-      outline: none;
-      border: none;
-}
-
-.textarea {
-      border-bottom: 1px solid #dfdfdf;
-}
-
-.send {
-      margin-left: 50px;
-      text-transform: uppercase;
-      padding: 20px 30px;
-      background: transparent;
-      color: #dfdfdf;
-      font-size: 14px;
-      letter-spacing: 2px;
-}
-
-.send:hover {
-      background: #dfdfdf;
-      color: #101010;
-}
-
-@media(max-width: 768px) {
-      #contact-form {
-            margin: 5% -8%;
-            width: 98%;
-      }
-}
 
 /*--------------- google slides --------------- */
 
@@ -583,10 +403,11 @@ textarea:focus {
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
 }
 
 #google-slides-container iframe{
     display: block;
-    margin-left: 25%;
 }
 /*--------------- google slides --------------- */
