--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ nav #menu li a:hover {
 }
 
 .hero h1 {
-      font-size: 5em;
+      font-size: 6em;
 }
 
 .hero h2 {
@@ -336,6 +336,8 @@ nav #menu li a:hover {
       margin-left: 200px;
       margin-right: 200px;
       margin-top: 10vh;
+      align-items: center;
+      justify-content: center;
 }
 
 #projects .project-header {
@@ -355,20 +357,25 @@ nav #menu li a:hover {
 
 #projects .all-projects {
       display: grid;
-      grid-template-columns: repeat(2,auto);
-      grid-column-gap: 80px;
-      align-items: center;
-      justify-content: center;
+      grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
+      grid-column-gap: 40px;
 }
 
 #projects img {
       width: 600px;
       height: 600px;
       object-fit: cover;
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+}
+
+#projects img:hover {
+      -webkit-filter: grayscale(0%);
+      filter: grayscale(0%);
 }
 
 #projects .space {
-      height: 200px;
+      height: 100px;
 }
 
 #projects .project-item {
@@ -395,9 +402,14 @@ nav #menu li a:hover {
 
 }
 
+#projects a {
+      text-decoration: none;
+}
+
 #projects a h1 {
       margin-top: 100px;
       font-size: 1em;
+      color: #0f0f0f;
 }
 
 /*--------------- about me --------------- */
@@ -405,7 +417,6 @@ nav #menu li a:hover {
 #about {
       margin-left: 200px;
       margin-right: 200px;
-      margin-top: 10vh;
 }
 
 #about .about-header h1 {
@@ -415,16 +426,25 @@ nav #menu li a:hover {
 
 #about hr {
       width: 90%;
+      margin-bottom: 80px;
 }
 
 #about .about-item h1 {
-      font-size: 5em;
+      font-family: 'Lora', serif;
+      font-size: 6em;
       margin-top: 100px;
+      margin: 10px;
+      font-weight: bold;
+}
+
+#about a {
+      text-decoration: none;
 }
 
 #about a h1 {
       margin-top: 100px;
       font-size: 1em;
+      color: #0f0f0f;
 }
 
 /*--------------- general style --------------- */
@@ -449,6 +469,26 @@ nav #menu li a:hover {
 
 #contact hr {
       width: 90%;
+}
+
+#contact-icon {
+      padding-left: 0px;
+      margin-top: 100px;
+      display: table;
+      margin: 0 auto;
+}
+
+#contact-icon ul {
+      
+      
+}
+
+#contact-icon li {
+      list-style: none;
+      padding-left: 0px;
+      display: inline;
+      padding-right: 80px;
+
 }
 
 /*--------------- google slides --------------- */
