--- a/style.css
+++ b/style.css
@@ -335,7 +335,6 @@ nav #menu li a:hover {
 #projects {
       margin-left: 200px;
       margin-right: 200px;
-      margin-top: 10vh;
       align-items: center;
       justify-content: center;
 }
@@ -459,7 +458,6 @@ nav #menu li a:hover {
 #contact {
       margin-left: 200px;
       margin-right: 200px;
-      margin-top: 10vh;
 }
 
 #contact .contact-header h1 {
@@ -469,18 +467,16 @@ nav #menu li a:hover {
 
 #contact hr {
       width: 90%;
+      margin-bottom: 100px;
 }
 
 #contact-icon {
       padding-left: 0px;
-      margin-top: 100px;
       display: table;
       margin: 0 auto;
 }
 
 #contact-icon ul {
-      
-      
 }
 
 #contact-icon li {
@@ -488,7 +484,6 @@ nav #menu li a:hover {
       padding-left: 0px;
       display: inline;
       padding-right: 80px;
-
 }
 
 /*--------------- google slides --------------- */
