--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
 
 body::-webkit-scrollbar{
       display: none;
-  }  
+}
 
 .section-title{
       text-align: center;
@@ -446,12 +446,47 @@ nav #menu li a:hover {
       color: #0f0f0f;
 }
 
-/*--------------- general style --------------- */
+/*--------------- cursor style ---------------
 
-/*--------------- general style --------------- */
+.cursor{
+      z-index: 999;
+      position: fixed;
+      background: #2696E8;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      pointer-events: none;
+      box-shadow: 0 0 20px #2696E8,
+                  0 0 60px #2696E8,
+                  0 0 100px #2696E8;
+      animation: colors 5s infinite;
+      transform: translate(-50%, -50%);
+      display: none;
+    }
+    
+    @keyframes colors{
+      0%{
+        filter: hue-rotate(0deg);
+      }
+      100%{
+        filter: hue-rotate(360deg);
+      }
+    }
+    
+    .cursor:before{
+      content: '';
+      position: absolute;
+      background: #2696E8;
+      width: 50px;
+      height: 50px;
+      opacity: 0.2;
+      transform: translate(-30%, -30%);
+      border-radius: 50%;
+    }
+
+--------------- cursor style --------------- */
 
 /*--------------- footer section --------------- */
-
 
 /*--------------- contact form --------------- */
 
