--- a/style.css
+++ b/style.css
@@ -20,13 +20,8 @@ body::-webkit-scrollbar{
       text-transform: lowercase;
 }
 
-.whitespace {
-      width: 100%;
-      height: 100px;
-}
-
 @media(max-width: 768px) {
-      .whitespace {
+      .space {
             display: none;
       }
 }
@@ -92,6 +87,7 @@ nav #brand {
       margin-left: 200px;
       line-height: 80px;
       font-weight: 700;
+      position: relative;
 }
 
 nav #brand a {
@@ -215,11 +211,11 @@ nav #menu li a:hover {
             visibility: visible;
             opacity: 1;
             margin-top: 6px;
-            margin-right: 4px;
+            margin-right: 50px;
       }
 
       nav #brand {
-            margin-left: 24px;
+            margin-left: 50px;
       }
 
       #menu a {
@@ -279,11 +275,7 @@ nav #menu li a:hover {
 
 @media(max-width: 768px) {
       .header h1 {
-            font-size: 35px;
-      }
-
-      .header h2, .hero a{
-            font-size: 10px;
+            font-size: 4.5em;
       }
 }
   
@@ -411,6 +403,13 @@ nav #menu li a:hover {
       color: #0f0f0f;
 }
 
+@media(max-width: 768px) {
+      #projects{
+            margin-left: 50px;
+            margin-right: 50px;
+      }
+}
+
 /*--------------- about me --------------- */
 
 #about {
@@ -444,6 +443,16 @@ nav #menu li a:hover {
       margin-top: 100px;
       font-size: 1em;
       color: #0f0f0f;
+}
+
+@media(max-width: 768px) {
+      #about{
+            margin-left: 50px;
+            margin-right: 50px;
+      }
+      #about .about-item h1{
+            font-size: 4.5em;
+      }
 }
 
 /*--------------- cursor style ---------------
@@ -519,6 +528,13 @@ nav #menu li a:hover {
       padding-left: 0px;
       display: inline;
       padding-right: 80px;
+}
+
+@media(max-width: 768px) {
+      #contact{
+            margin-left: 50px;
+            margin-right: 50px;
+      }
 }
 
 /*--------------- google slides --------------- */
